--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
         {% if user.is_authenticated %}
             <p>Welcome {{ user.username }} !!!</p>
         {% else %}
-            <a href="{% provider_login_url 'github' %}">Sign Up</a>
+            <a href="{% provider_login_url 'google' %}">Sign Up</a>
         {% endif %}
     </body>
 </html>
