--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -28,6 +28,8 @@
     
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css_custom/index.css' %}" rel="stylesheet">
+
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -50,6 +52,8 @@
 
      <!-- Footer -->
     {% include 'partials/_footer.html' %} 
+    {% include 'partials/_modal-login.html' %} 
+
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
@@ -67,6 +71,8 @@
 
     <!-- Template Main JS File -->
     <script src="{% static 'js/main.js' %}"></script>
+    <script src="{% static 'css_custom/js/index.js' %}"></script>
+
     
 
 </body>
