--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -56,7 +56,7 @@
           
           <li><a href="contact.html">Contact</a></li>
 
-          <li class="get-started"><a href="{% url 'home' %}">Login</a></li>
+          <li class="get-started"><a href="#" data-toggle="modal" data-target="#login_modal">Login</a></li>
                     
           <li class="sign-up"><a href="" >Sign up</a></li>
 
