--- a/templates/page/home.html
+++ b/templates/page/home.html
@@ -6,67 +6,27 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div class="hero-container" data-aos="fade-up">
-        <h1>Welcome to Makerlab</h1>
-        <h2>We are team of talanted designers making websites with Bootstrap</h2>
+        <h1>The Home for Robotics</h1>
+        <h2>We host events, training. Our members have front row access to hardware knowledge</h2>
         
         </div>
     </section><!-- End Hero -->
 
     <main id="main">
-
         <!-- ======= About Section ======= -->
         <section id="about" class="about">
-        <div class="container" data-aos="fade-up">
+        <div class="container p-4 rounded" data-aos="fade-up">
 
-            <div class="row justify-content-end">
-            <div class="col-lg-11">
-                <div class="row justify-content-end">
-
-                <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box py-5">
-                    <i class="icofont-simple-smile"></i>
-                    <span data-toggle="counter-up">65</span>
-                    <p>Happy Clients</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box py-5">
-                    <i class="icofont-document-folder"></i>
-                    <span data-toggle="counter-up">85</span>
-                    <p>Projects</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box pb-5 pt-0 pt-lg-5">
-                    <i class="icofont-clock-time"></i>
-                    <span data-toggle="counter-up">12</span>
-                    <p>Years of experience</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
-                    <div class="count-box pb-5 pt-0 pt-lg-5">
-                    <i class="icofont-award"></i>
-                    <span data-toggle="counter-up">15</span>
-                    <p>Awards</p>
-                    </div>
-                </div>
-
-                </div>
-            </div>
-            </div>
-
+            
             <div class="row">
 
             <div class="col-lg-6 video-box align-self-baseline">
-                <img src="{% static 'img/about.jpg' %}" class="img-fluid" alt="">
-                <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+                <img src="{% static 'img/gianmichele.jpg' %}" class="img-fluid" alt="">
+                <a href="https://www.youtube.com/watch?v=m2puqY6wec8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
             </div>
 
             <div class="col-lg-6 pt-3 pt-lg-0 content">
-                <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+                <h3>Innovate from scratch. The makerlab adventure</h3>
                 <p class="font-italic">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
                 magna aliqua.
@@ -77,11 +37,7 @@
                 <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
                 <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
                 </ul>
-                <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum
-                </p>
+                
             </div>
 
             </div>
@@ -94,7 +50,7 @@
         <div class="container" data-aos="fade-in">
 
             <div class="text-center">
-            <h3>Call To Action</h3>
+            <h3>Subscribe</h3>
             <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <a class="cta-btn" href="#">Call To Action</a>
             </div>
@@ -107,7 +63,7 @@
         <div class="container">
 
             <div class="section-title pt-5" data-aos="fade-up">
-            <h2>Our Services</h2>
+            <h2>Our Training</h2>
             </div>
 
             <div class="row">
