--- a/templates/page/membership.html
+++ b/templates/page/membership.html
@@ -40,7 +40,7 @@
                 <li class="na">Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="{% url 'proceed' %}" class="btn-buy">Buy Now</a>
               </div>
             </div>
           </div>
