--- a/static/css/style.css
+++ b/static/css/style.css
@@ -368,7 +368,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/makerlab-bg-home.jpg") top center;
+  background: url("../img/jj.jpg") bottom center;
   background-size: cover;
   position: relative;
   margin-bottom: -140px;
