--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -58,7 +58,7 @@
 
           <li class="get-started"><a href="{% url 'home' %}">Login</a></li>
                     
-          <li class="sign-up"><a href="" >Sign up</a></li>
+          <li class="sign-up"><a href="{% url 'signupuser' %}" >Sign up</a></li>
 
           
 
