--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -50,6 +50,7 @@
 
      <!-- Footer -->
     {% include 'partials/_footer.html' %} 
+    {% include 'partials/_login_modal.html' %} 
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
