--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2,8 +2,19 @@
     margin-top: 40px;
     margin-bottom: 45px;
 }
-
-
+#login_modal{
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+}
+#login_modal .modal-header {
+    padding: 0.5rem;
+    border-bottom: none;
+}
+#login_modal form {
+}
 @media (max-width: 768px)
 {
 
