--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -28,6 +28,8 @@
     
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -44,13 +46,16 @@
 </head>
 <body  style="height: 100vh; font-size: 1em;">
      <!-- Top bar -->
+  
     {% include 'partials/_header.html' %}
     
     {% block content %} {% endblock %}
 
      <!-- Footer -->
-    {% include 'partials/_footer.html' %} 
-    {% include 'partials/_login_modal.html' %} 
+    {% include 'partials/_footer.html' %}
+    {% include 'partials/login.html' %}
+
+
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
