--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -58,7 +58,7 @@
 
           <li class="get-started"><a href="#" data-toggle="modal" data-target="#login_modal">Login</a></li>
                     
-          <li class="sign-up"><a href="" >Sign up</a></li>
+          <li class="sign-up"><a href="{% url 'signup' %}" >Sign up</a></li>
 
           
 
