--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load socialaccount %}
+
 <!DOCTYPE html>
 <html lang="">
 <head>
@@ -28,11 +30,8 @@
     
     <!-- Template Main CSS File -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
-<<<<<<< HEAD
     <link href="{% static 'css_custom/index.css' %}" rel="stylesheet">
-=======
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
->>>>>>> 0b8326f563c225b3adce6a09d53a89a69550e3c8
 
       <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,14 +55,8 @@
     {% block content %} {% endblock %}
 
      <!-- Footer -->
-<<<<<<< HEAD
     {% include 'partials/_footer.html' %} 
     {% include 'partials/_modal-login.html' %} 
-=======
-    {% include 'partials/_footer.html' %}
-    {% include 'partials/login.html' %}
-
->>>>>>> 0b8326f563c225b3adce6a09d53a89a69550e3c8
 
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
