--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,121 +1,23 @@
 {% extends 'bases/index.html' %}
- {% load static %}
-  
- {% block content %}
- <body>
-    <!-- ======= Hero Section ======= -->
-    <section id="hero">
-        <div class="hero-container" data-aos="fade-up">
-        <h1>The Home for Robotics</h1>
-        <h2>We host events, training. Our members have front row access to hardware knowledge</h2>
-        
-        </div>
-    </section><!-- End Hero -->
+{% load static %}
+{% load socialaccount %} 
 
-    <main id="main">
-        <!-- ======= About Section ======= -->
-        <section id="about" class="about">
-        <div class="container p-4 rounded" data-aos="fade-up">
-
-            
-            <div class="row">
-
-            <div class="col-lg-6 video-box align-self-baseline">
-                <img src="{% static 'img/gianmichele.jpg' %}" class="img-fluid" alt="">
-                <a href="https://www.youtube.com/watch?v=m2puqY6wec8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-            </div>
-
-            <div class="col-lg-6 pt-3 pt-lg-0 content">
-                <h3>Innovate from scratch. The makerlab adventure</h3>
-                <p class="font-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua.
-                </p>
-                <ul>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bx bx-check-double"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bx bx-check-double"></i> Voluptate repellendus pariatur reprehenderit corporis sint.</li>
-                <li><i class="bx bx-check-double"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                </ul>
-                
-            </div>
-
-            </div>
-
-        </div>
-        </section><!-- End About Section -->
-
-        <!-- ======= Cta Section ======= -->
-        <section id="cta" class="cta">
-        <div class="container" data-aos="fade-in">
-
-            <div class="text-center">
-            <h3>Subscribe</h3>
-            <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="cta-btn" href="#">Call To Action</a>
-            </div>
-
-        </div>
-        </section><!-- End Cta Section -->
-
-        <!-- ======= Services Section ======= -->
-        <section id="services" class="services  section-bg ">
-        <div class="container">
-
-            <div class="section-title pt-5" data-aos="fade-up">
-            <h2>Our Training</h2>
-            </div>
-
-            <div class="row">
-            <div class="col-md-6">
-                <div class="icon-box" data-aos="fade-up">
-                <div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>
-                <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="icon-box" data-aos="fade-up">
-                <div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>
-                <h4 class="title"><a href="">Dolor Sitema</a></h4>
-                <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-                </div>
-            </div>
-
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-                <div class="icon-box">
-                <div class="icon"><i class="las la-file-alt" style="color: #3fcdc7;"></i></div>
-                <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-                </div>
-            </div>
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-                <div class="icon-box">
-                <div class="icon"><i class="las la-tachometer-alt" style="color:#41cf2e;"></i></div>
-                <h4 class="title"><a href="">Magni Dolores</a></h4>
-                <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                </div>
-            </div>
-
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-                <div class="icon-box">
-                <div class="icon"><i class="las la-globe-americas" style="color: #d6ff22;"></i></div>
-                <h4 class="title"><a href="">Nemo Enim</a></h4>
-                <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-                </div>
-            </div>
-            <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
-                <div class="icon-box">
-                <div class="icon"><i class="las la-clock" style="color: #4680ff;"></i></div>
-                <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-                <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-                </div>
-            </div>
-            </div>
-
-        </div>
-        </section><!-- End Services Section -->
-
-    </main><!-- End #main -->
-</body>  
+{% block extra_head %}
+   
 {% endblock %}
+
+{% block content %}
+    <div class='text-center mt-3'>
+        <h1>Django Allauth Tutorial</h1>
+
+        {% if user.is_authenticated %}
+            <p>Welcome {{ user.username }} !!!</p>
+        {% else %}
+            <a href="{% provider_login_url 'github' %}" class='btn btn-primary btn-github'>Github login</a>
+            <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2 login</a>
+        {% endif %}
+    </div>
+    
+
+{% endblock %}
+
