--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,25 +1,145 @@
-.intro-2 {
-  background: url("https://mdbootstrap.com/img/Photos/Others/img (42).jpg")no-repeat center center;
-  background-size: cover;
+/* Colors
+--------------------------------------------------------------------------- */
+/* Default Boostrap colors: */
+/* https://github.com/twbs/bootstrap/blob/master/dist/css/bootstrap.css#L7 */
+
+/* Add some Bootstrap colors available in SCSS as custom values. */
+/* Usage: var(--my-custom-value); */
+/* See https://developer.mozilla.org/en-US/docs/Web/CSS/--* */
+:root {
+  --gray-700: #495057;
+  --gray-900: #212529;
 }
-.view {
-  margin-top: -56px;
+
+
+/* Layout.
+--------------------------------------------------------------------------- */
+body {
+  overflow-y: scroll;
 }
-.navbar {
+
+html {
+  background: #343a40!important;
+  background: var(--gray-dark);
+}
+
+
+
+/* Header.
+--------------------------------------------------------------------------- */
+
+
+/* BETA banner.
+--------------------------------------------------------------------------- */
+
+body:after {
+  content: "BETA";
+  color: #fff;
+  background: #d63626;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 0.2rem 1.9rem;
+  position: fixed;
+  z-index: 2;
+  top: 0.3rem;
+  left: -1.8rem;
+  transform: rotate(-45deg);
+}
+
+/* Horizontal line with words in the middle.
+https://stackoverflow.com/questions/5214127/css-technique-for-a-horizontal-line-with-words-in-the-middle/44647131#44647131
+--------------------------------------------------------------------------- */
+
+.lines-on-sides {
+    display: flex;
+    flex-direction: row;
+}
+.lines-on-sides:before, .lines-on-sides:after{
+    content: "";
+    flex: 1 1;
+    border-bottom: 1px solid #000;
+    margin: auto;
+}
+.lines-on-sides:before {
+    margin-right: 10px
+}
+.lines-on-sides:after {
+    margin-left: 10px
+}
+
+/* Responsive Multi-Step Progress Bar.
+https://codepen.io/athimannil/pen/wWPYkQ
+Usage:
+    <ul class="list-unstyled multi-steps">
+        <li>Type de prescripteur</li>
+        <li class="is-active">SIRET</li>
+        <li>Vos informations</li>
+    </ul>
+--------------------------------------------------------------------------- */
+
+.multi-steps > li.is-active:before, .multi-steps > li.is-active ~ li:before {
+  content: counter(stepNum);
+}
+
+.multi-steps > li.is-active:after, .multi-steps > li.is-active ~ li:after {
+  background-color: #ededed;
+}
+
+.multi-steps {
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+}
+
+.multi-steps > li {
+  counter-increment: stepNum;
+  text-align: center;
+  display: table-cell;
+  position: relative;
+  color: #28a745;
   z-index: 1;
-  background-color: transparent;
 }
-.top-nav-collapse {
-  background-color: #4285F4;
+
+.multi-steps > li:before {
+  content: '\2713'; /* Check mark symbol. */
+  display: block;
+  margin: 0 auto 4px;
+  background: #fff;
+  width: 36px;
+  height: 36px;
+  line-height: 32px;
+  text-align: center;
+  font-weight: bold;
+  border: 2px solid #28a745;
+  border-radius: 50%;
 }
-@media only screen and (max-width: 768px) {
-  .navbar {
-      background-color: #4285F4;
-  }
+
+.multi-steps > li:after {
+  content: '';
+  height: 2px;
+  width: 100%;
+  background-color: #28a745;
+  position: absolute;
+  top: 16px;
+  left: 50%;
+  z-index: -1;
 }
-html,
-body,
-header,
-.view {
-  height: 100%;
+
+.multi-steps > li:last-child:after {
+  display: none;
+}
+
+.multi-steps > li.is-active:before {
+  background-color: #fff;
+  border-color: #28a745;
+}
+
+.multi-steps > li.is-active ~ li {
+  color: #808080;
+}
+
+.multi-steps > li.is-active ~ li:before {
+  background-color: #ededed;
+  border-color: #ededed;
 }
