--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,16 +1,5 @@
 <!-- Footer -->
-<footer class="bg-dark p-3 text-light">
-    <div class='container'>
-        <div class='row text-center justify-content-center'>
-            <div class='col-12'>
-                <a href='#'>Politique de confidentialité</a>
-                |
-                <a href='#'>Conditions d'utilisation</a>
-            </div>
-            <div class='col-12'>
-                &copy; Copyright ESIH - Tous droits réservés.
-            </div>
-        </div>
-    </div>
+<footer>
+  
 </footer>
 <!-- Footer -->
