--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -17,19 +17,19 @@
                     </div>
                 </div>
 	            <div class="row justify-content-center mt-2">
-                        <div class="col-12 col-md-10 col-lg-8">
-                            <form class="card card-sm">
+                        <div class="col-12 col-md-10 col-lg-8  text-white">
+                            <form class="card  opacity-6 card-sm">
                                 <div class="card-body row no-gutters align-items-center">
                                     <div class="col-auto">
                                         <i class="fas fa-search h4 text-body"></i>
                                     </div>
                                     <!--end of col-->
                                     <div class="col">
-                                        <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords">
+                                        <input class="form-control form-control-lg form-control-borderless " type="search" placeholder="Search topics or keywords">
                                     </div>
                                     <!--end of col-->
                                     <div class="col-auto">
-                                        <button class="btn btn-lg btn-dark" type="submit">Search</button>
+                                        <button class="btn btn-lg btn-dark " type="submit" id='opacity-1'>Search</button>
                                     </div>
                                     <!--end of col-->
                                 </div>
@@ -43,26 +43,27 @@
     </div>
     <div class="container">
         <div class="row mt-5 justify-content-center text-center">
-            <div class="col-md-3 col-sm-12">
-                <i class='fa fa-4x fa-globe-americas'></i>
+            <div class="col-md-4 col-sm-12">
+                <i class='fa fa-4x fa-book'></i>
+                <h4 class='font-weight-bold'>Courses</h4>
+                
             </div>
-            <div class="col-md-3 col-sm-12">
-                <i class='fa fa-4x fa-binoculars'></i>
+            <div class="col-md-4 col-sm-12">
+                <i class='fa fa-4x fa-user-tie'></i>
+                <h4 class='font-weight-bold'>Membersip</h4>
             </div>
-            <div class="col-md-3 col-sm-12">
-                <i class='fa fa-4x fa-wrench'></i>
-            </div>
-             <div class="col-md-3 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <i class='fa fa-4x fa-robot'></i>
+                <h4 class='font-weight-bold'>Projects</h4>
             </div>
         </div>
     </div>
-    <div class="bg-dark mt-4">
+    <div class=" mt-5">
         <div class="container">
             <div class="d-flex flex-column mt-5 p-3 justify-content-center align-items-center text-center">
-                <h3 class='text-white font-weight-bold'>"Innovate and Do It Yourself"</h3>
-                <h5 class='text-white'>Intervention by Gian Michele Toglia, former Head at the MakerLab</h5>
-                <iframe class="m-4" width="505" height="285"
+                <h4 class='font-weight-bold mt-4'>Innovate and Do It Yourself</h4>
+                <h6 class=''>Intervention by Gian Michele Toglia, former Head at the MakerLab</h6>
+                <iframe class="m-4" width="650"  height="350"
                     src="https://www.youtube.com/embed/m2puqY6wec8">
                     </iframe> 
             </div>
