--- a/templates/bases/index.html
+++ b/templates/bases/index.html
@@ -52,5 +52,7 @@
     <script type="text/javascript" src="{% static 'bootstrap/js/bootstrap.min.js' %} "></script>
 
     {% include 'partials/_modal_auth.html' %}
+
+    {% block scripts %}{% endblock %}
 </body>
 </html>
