--- a/static/css/style.css
+++ b/static/css/style.css
@@ -26,6 +26,13 @@ body {
   position: relative;
 }
 
+.subheader {
+  background-image: url('../img/esih1.jpg');
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  padding: 40px;
+}
 
 .overlay{
   position: absolute;
@@ -166,4 +173,46 @@ Usage:
 .multi-steps > li.is-active ~ li:before {
   background-color: #ededed;
   border-color: #ededed;
+}
+
+
+/* Range Slider.
+--------------------------------------------------------------------------- */
+.slidecontainer {
+  width: 100%; /* Width of the outside container */
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 9px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%; 
+  background: #343a40;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #343a40;
+  cursor: pointer;
 }
