--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class='col-md-4 col-12'>
-                <div class="card ">
+                <div class="card shadow-sm">
                     <div class="card-header">
                         Filters
                     </div>
