remove old stuff in home template

--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -27,7 +27,7 @@
                                     <p class="card-text">{{course.description}}</p>
                                 </div>
                                 <div class='card-body p-0 px-3'>
-                                    <a class='btn btn-primary btn-block' href='#'>{% trans "Enroll" %}</a>
+                                    <a class='btn btn-primary btn-block' href='{% url "proceed" %}'>{% trans "Enroll" %}</a>
                                     <a class='btn btn-outline-secondary btn-block' href='#'>{% trans "Learn more" %}</a>
                                 </div>
                                 <div class="card-body">
