--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -35,9 +35,8 @@
                     </div>
                 </div>
                 {% else %}
-                    {% comment %} <a href="" class='btn btn-primary bt'>Github login</a>
-                    <a href="{% provider_login_url "facebook" method="oauth2" %}">Facebook OAuth2 login</a> {% endcomment %}
                     <a class="btn btn-light ml-2" data-toggle="modal" data-target="#loginModal">login</a>
+                    <a href="#" class='btn btn-outline-light ml-2'>Signup</a>
                 {% endif %}
                 
             </div>
