--- a/templates/partials/_modal_auth.html
+++ b/templates/partials/_modal_auth.html
@@ -1,4 +1,3 @@
-{% load socialaccount %} 
 
 {# this file must be included in "last_element" block #}
 
@@ -12,8 +11,8 @@
         </button>
       </div>
       <div class="modal-body p-5 d-flex flex-column justify-content-center text-center "> 
-        <a class='btn btn-primary' href="{% provider_login_url 'github' %}">login with github</a>
-        <a class='btn btn-primary mt-3' href="{% provider_login_url "facebook" method="oauth2" %}">login with facebook</a>
+        <a class='btn btn-primary' href="#">login with github</a>
+        <a class='btn btn-primary mt-3' href="#">login with facebook</a>
         
       </div>
     </div>
